--- a/park.html
+++ b/park.html
@@ -22,6 +22,9 @@
 		  <form name="test">
                 <input type="text" name="textie">
             </form>
+    <table>
+        <img src = "paintedladi.jpg" alt = "Painted Ladies Houses" width="1200" height="400">>
+    </table>
 
 	    
 </body>
