--- a/park.html
+++ b/park.html
@@ -23,7 +23,11 @@
                 <input type="text" name="textie">
             </form>
     <table>
-        <img src = "paintedladi.jpg" alt = "Painted Ladies Houses" width="1200" height="400">>
+       <tr>
+        <td>
+            <img id= "PaintedLady" src="paintedladi.jpg" width="1200" height="400"></img>
+        </td>
+      </tr>
     </table>
 
 	    
